tests/errors/trait-object-qualifier.ari
trait Score {
}

struct Holder {
  value: ptr dyn Score,
}

fn main() -> i64 {
  0
}
